# libiter

./: .clang-format  README.md  meson.build
include/iter/: bitmap.h  error.h  generic.h  global.h  hash.h  hashmap.h  iter.h  pool.h  vector.h
src/: bitmap.c  global.c  hashmap.c  iter.c  pool.c  vector.c
test/: hashmap.c  iter.c  main.c  pool.c  vector.c
